--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">사회경험</a>
+          <a class="nav-link js-scroll-trigger" href="#interests">Activity</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
@@ -78,6 +78,7 @@
           <br />합리적인 근거를 바탕으로 한 커뮤니케이션을 하기 위해 노력합니다.
           <br />유지보수가 쉽고, 지속가능한 프로그램을 위한 코드 작성을 중요히 여깁니다.
           <br />새로운 기술이나 환경을 흥미롭게 받아들이고, 처음 접하는 기술을 소화하여 큰 이슈 없이 적용하고 업무를 끝마치곤 합니다.
+          <br />
           <br />개발이란, 서비스를 구축하여 목표 달성하는 것에 그치는 것이 아닌 생산된 서비스를 사용자의 목적에 부합하고 편리하게 사용함으로써 비로소 달성된다고 생각합니다.
         </p>
       </div>
@@ -99,25 +100,24 @@
           <li class="list-inline-item">
             <i class="fab fa-react"></i>
           </li>
+          <li class="list-inline-item">
+            <i class="fa-brands fa-git-alt"></i>
+          </li>
         </ul>
 
         <div class="subheading mb-3">ETC</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            etc1
+            Spring Framework
           </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            etc2
+            JSP
           </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            etc3
-          </li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            etc4
+            Oracle
           </li>
         </ul>
       </div>
@@ -130,6 +130,7 @@
         <h2 class="mb-5">Project</h2>
 
         <hr class="m-0">
+        <br />
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
             <div class="resume-content">
               <h3 class="mb-0">FUNDFUNDHAEYO 뻔뻔해요</h3>
@@ -159,8 +160,10 @@
               <span class="text-primary">2024.01 - 2024.03</span>
             </div>
         </div>
+        <br />
 
         <hr class="m-0">
+        <br />
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">GOTMOOLJU 갓물주</h3>
@@ -188,6 +191,38 @@
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">2024.03 - 2024.04</span>
+          </div>
+        </div>
+        <br />
+
+        <hr class="m-0">
+        <br />
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Simple React</h3>
+            <div class="subheading mb-3">부동산 정보 공유 플랫픔</div>
+            <p>Simple Counter 와 To Do List 를 React 로 구현하는 프로젝트입니다.</p>
+            <p style="color: black; font-weight: bold;"><br />적용 사항</p>
+            <p>- 적용사항1</p>
+            <p>- 적용사항2</p>
+            <p style="color: black; font-weight: bold;"><br />개선해야할 사항</p>
+            <p>- 개선사항1</p>
+            <p style="color: black; font-weight: bold;"><br />사용 기술</p>
+            <p>- JavaScript, React </p>
+            <p style="color: black; font-weight: bold;"><br />시연 자료</p>
+            <div>
+              <iframe style="width: 50vw; height: 28.3vw;" allowfullscreen
+                src=""></iframe>
+            </div>
+            <br />
+            <div class="social-icons">
+              <a href="https://github.com/NanoKim/TIL/tree/main/React">
+                <i class="fab fa-github"></i>
+              </a>
+            </div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Mini Project</span>
           </div>
         </div>
 
@@ -235,7 +270,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
-        <h2 class="mb-5" style="text-transform: none;">사회경험</h2>
+        <h2 class="mb-5" style="text-transform: none;">Activity</h2>
         <div class="subheading" style="text-transform: none;">TBU</div>
         <br />
         <div class="subheading" style="text-transform: none;">TBU</div>
