--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Activity</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          <a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a>
         </li>
       </ul>
     </div>
@@ -67,6 +67,7 @@
         <h1 class="mb-0">Jaeyeong
           <span class="text-primary">Kim</span>
         </h1>
+        <br />
         <div class="subheading mb-5">
           <a href="mailto:kjyyy7341@gmail.com">kjyyy7341@gmail.com</a>
         </div>
@@ -79,7 +80,26 @@
           <br />유지보수가 쉽고, 지속가능한 프로그램을 위한 코드 작성을 중요히 여깁니다.
           <br />새로운 기술이나 환경을 흥미롭게 받아들이고, 처음 접하는 기술을 소화하여 큰 이슈 없이 적용하고 업무를 끝마치곤 합니다.
           <br />
-          <br />개발이란, 서비스를 구축하여 목표 달성하는 것에 그치는 것이 아닌 생산된 서비스를 사용자의 목적에 부합하고 편리하게 사용함으로써 비로소 달성된다고 생각합니다.
+          <br />개발이란, 서비스를 구축하여 목표 달성하는 것에 그치지 않고, 생산된 서비스가 사용자의 목적에 부합하고 편리하게 사용함으로써 달성된다고 생각합니다.
+          <br />
+          <br />
+          <p style="color: black;">보완해야할 부분들이 많지만 개발을 좋아하고, 빠르게 성장하기에 극복할 수 있을 것이라고 생각합니다.</p>
+          <br />
+          <div class="subheading mb-3">Channel</div>
+          <div class="social-icons">
+            <a href="https://github.com/angKH2nd/GotMoolJu">
+              <i class="fab fa-github"></i>
+            </a>
+            <a href="https://simple-impala-444.notion.site/System-out-print-NanoKim-fe3040183c5a459cb14b6abff5977fd0?pvs=4">
+              <i class="fab fa-brands fa-blogger"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/nanokim">
+              <i class="fab fa-brands fa-linkedin"></i>
+            </a>
+            <a href="https://nano-ko39606.slack.com/team/U064YMLNH62">
+              <i class="fab fa-brands fa-slack"></i>
+            </a>
+          </div>
         </p>
       </div>
     </section>
@@ -101,7 +121,7 @@
             <i class="fab fa-react"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fa-brands fa-git-alt"></i>
+            <i class="fab fa-brands fa-git-alt"></i>
           </li>
         </ul>
 
@@ -120,6 +140,7 @@
             Oracle
           </li>
         </ul>
+
       </div>
     </section>
 
@@ -129,9 +150,21 @@
       <div class="w-100">
         <h2 class="mb-5">Project</h2>
 
+        <div class="social-icons" style="margin-bottom: 200px;">
+          <a class="js-scroll-trigger" href="#project1" style="margin-right: 250px;">
+            <img width="250" height="250" src="img/project1.gif">
+          </a>
+          <a class="js-scroll-trigger" href="#project2" style="margin-right: 250px;">
+            <img width="250" height="250" src="img/project2.gif">
+          </a>
+          <a class="js-scroll-trigger" href="#project3">
+            <img width="250" height="250" src="img/project3.gif">
+          </a>
+        </div>
+
         <hr class="m-0">
         <br />
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between" id="project1">
             <div class="resume-content">
               <h3 class="mb-0">FUNDFUNDHAEYO 뻔뻔해요</h3>
               <div class="subheading mb-3">창작자와 후원자가 한 자리에 모이는 크라우드펀딩 사이트</div>
@@ -164,7 +197,7 @@
 
         <hr class="m-0">
         <br />
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between" id="project2">
           <div class="resume-content">
             <h3 class="mb-0">GOTMOOLJU 갓물주</h3>
             <div class="subheading mb-3">부동산 정보 공유 플랫픔</div>
@@ -190,17 +223,17 @@
             </div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">2024.03 - 2024.04</span>
+            <span class="text-primary">2024.03 - 2024.05</span>
           </div>
         </div>
         <br />
 
         <hr class="m-0">
         <br />
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between" id="project3">
           <div class="resume-content">
             <h3 class="mb-0">Simple React</h3>
-            <div class="subheading mb-3">부동산 정보 공유 플랫픔</div>
+            <div class="subheading mb-3">리액트 기반 심플 프로젝트</div>
             <p>Simple Counter 와 To Do List 를 React 로 구현하는 프로젝트입니다.</p>
             <p style="color: black; font-weight: bold;"><br />적용 사항</p>
             <p>- 적용사항1</p>
@@ -261,6 +294,18 @@
           </div>
         </div>
 
+        <br />
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-1">가천대학교</h3>
+            <div class="subheading mb-3">경영학트랙</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2014.03 - 2020.08</span>
+          </div>
+        </div>
+
       </div>
     </section>
 
@@ -271,31 +316,69 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5" style="text-transform: none;">Activity</h2>
-        <div class="subheading" style="text-transform: none;">TBU</div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-1">주식회사 온더</h3>
+            <div class="subheading mb-3">Growth Management Team</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2021.03 - 2023.11</span>
+          </div>
+        </div>
+
         <br />
-        <div class="subheading" style="text-transform: none;">TBU</div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-1">인성서포터즈</h3>
+            <div class="subheading mb-3">총무팀 부팀장</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2018.03 - 2019.02</span>
+          </div>
+        </div>
+
+        <br />
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-1">외국인멘토링</h3>
+            <div class="subheading mb-3">팀장, 우수사례 선정</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2018.09 - 2019.02</span>
+          </div>
+        </div>
+
+        <br />
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-1">학습공동체</h3>
+            <div class="subheading mb-3">팀장, 교수학습개발센터 장려상</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2018.03 - 2018.09</span>
+          </div>
+        </div>
       </div>
+
     </section>
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="certifications">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h2 class="mb-5">Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - TBU
+            <i class="fa-li fa fa-solid fa-certificate"></i>
+            정보 처리 기사 필기
           </li>
           <li>
-            <i class="fa-li fa fa-trophy"></i>
-            2<sup>nd</sup>
-            Place - TBU
+            <i class="fa-li fa fa-solid fa-certificate"></i>
+            SQLD
           </li>
-          </br>
-          <li>정보 처리 기사 필기</li>
-          <li>SQLD</li>
         </ul>
       </div>
     </section>
