--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="author" content="Kimm Jaeyeong" />
   <meta name="keywords"
-    content="웹개발자, 백엔드, 포트폴리오, 개발자 포트폴리오, 백엔드 포트폴리오, 웹퍼블리셔, 웹퍼블리셔 포트폴리오, 풀스텍 개발자, 백엔드 개발자, 개발자 프리랜서, 코딩, 풀스텍" />
-  <meta name="description" content="안녕하세요. 백엔드, 웹퍼블리셔, 풀스텍 개발자 김재영의 포트폴리오 사이트 입니다." />
-  <meta property="og:description" content="안녕하세요. 백엔드, 웹퍼블리셔, 풀스텍 개발자 김재영의 포트폴리오 사이트 입니다." />
+    content="웹개발자, 백엔드, 포트폴리오, 개발자 포트폴리오, 백엔드 포트폴리오, 웹퍼블리셔, 웹퍼블리셔 포트폴리오, 풀스택 개발자, 백엔드 개발자, 개발자 프리랜서, 코딩, 풀스택" />
+  <meta name="description" content="안녕하세요. 백엔드, 웹퍼블리셔, 풀스택 개발자 김재영의 포트폴리오 사이트 입니다." />
+  <meta property="og:description" content="안녕하세요. 백엔드, 웹퍼블리셔, 풀스택 개발자 김재영의 포트폴리오 사이트 입니다." />
   <meta property="og:title" content="백엔드 개발자 김재영 포트폴리오" />
   <meta property="og:image"
     content="https://avatars3.githubusercontent.com/u/65346989?s=460&u=615da43998a0899034deb88f164cd0fc583fb222&v=4" />
@@ -85,7 +85,7 @@
                 있습니다. <br />
                 항상 사용자 입장에서 생각하고, 더 나은 방향으로 가기위해
                 고민하고 또 고민합니다. <br />
-                현재는 백엔드 개발자를 넘어 풀스텍 개발에도 큰 관심을
+                현재는 백엔드 개발자를 넘어 풀스택 개발에도 큰 관심을
                 가지고 있으며 <br />
                 차차 하나씩 공부 하고 있습니다. 제가 좋아하는 일, 계속해서 더
                 잘하고 싶습니다 : ) <br />
