index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:description" content="안녕하세요. 백엔드, 웹퍼블리셔, 풀스택 개발자 김재영의 포트폴리오 사이트 입니다." />
   <meta property="og:title" content="백엔드 개발자 김재영 포트폴리오" />
   <meta property="og:image"
-    content="https://avatars3.githubusercontent.com/u/65346989?s=460&u=615da43998a0899034deb88f164cd0fc583fb222&v=4" />
+    content="" />
   <title>김재영 | 백엔드 개발자 포트폴리오</title>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Passion+One&display=swap" rel="stylesheet" />
