--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <meta name="description" content="안녕하세요. 백엔드, 웹퍼블리셔, 풀스택 개발자 김재영의 포트폴리오 사이트 입니다." />
   <meta property="og:description" content="안녕하세요. 백엔드, 웹퍼블리셔, 풀스택 개발자 김재영의 포트폴리오 사이트 입니다." />
   <meta property="og:title" content="백엔드 개발자 김재영 포트폴리오" />
+  <meta property="og:image:width" content="600">
+  <meta property="og:image:height" content="600">
   <meta property="og:image"
     content="" />
   <title>김재영 | 백엔드 개발자 포트폴리오</title>
